# grsu-sna

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
report/: report.tex
results/: 01_graph_stats.csv  02_benchmark.csv  03_gnn_results.csv  04_leaders_dblp-top500.csv  04_leaders_dolphins.csv  04_leaders_email-Eu-core.csv  04_leaders_facebook-ego-1684.csv  04_leaders_football.csv  04_leaders_karate.csv
src/: __init__.py  benchmark.py  centrality.py  community.py  config.py  datasets.py  gnn.py  graph_models.py  graph_stats.py  isolation.py  log.py  metrics.py  pipeline.py  visualization.py
tests/: test_benchmark.py
