[project]
name = "grsu-sna"
version = "0.1.0"
description = "Social network analysis: communities, opinion leaders, isolated groups (classical algorithms + GNN)."
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "matplotlib>=3.10",
    "networkx>=3.6",
    "numpy>=2.4",
    "pandas>=3.0",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "torch>=2.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
